--- a/app/src/main/res/layout/category_row_child.xml
+++ b/app/src/main/res/layout/category_row_child.xml
@@ -2,22 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:gravity="center_vertical"
     android:padding="5dp"
     android:id="@+id/layout_item"
     android:layout_marginTop="5dp"
-
     android:outlineSpotShadowColor="#123456"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:gravity="center_vertical"
 
+        android:paddingLeft="25dp"
+        android:paddingRight="5dp"
         android:background="?android:attr/selectableItemBackground"
         android:layout_height="wrap_content">
         <ImageView
-            android:id="@+id/ivIcon"
+            android:id="@+id/ivIconChild"
             android:src="@drawable/ic_baseline_school_24"
             android:layout_width="50dp"
             android:layout_height="50dp"/>
@@ -29,7 +31,7 @@
             android:orientation="vertical"
             android:layout_height="wrap_content">
             <TextView
-                android:id="@+id/tvNameCategory"
+                android:id="@+id/tvNameCategoryChild"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="@color/black"
@@ -42,17 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:backgroundTint="#fff"
-            android:id="@+id/ivGroupIndicator"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/group_indicator">
-
-        </ImageButton>
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:id="@+id/ibtnVert"
+            android:id="@+id/ibtnVertChild"
             android:backgroundTint="#fff"
             android:src="@drawable/ic_baseline_more_vert_24">
 
