--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -2,34 +2,46 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawerLayout"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragment.CategoryFragment">
-
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbarCategory"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#fff">
-
-        <androidx.appcompat.widget.Toolbar
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbarCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/categoryToolbar"
-            android:minHeight="48dp"
-            android:theme="?attr/actionBarTheme">
+            android:background="#fff">
+
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/categoryToolbar"
+                android:minHeight="48dp"
+                android:theme="?attr/actionBarTheme">
 
 
 
-        </androidx.appcompat.widget.Toolbar>
+            </androidx.appcompat.widget.Toolbar>
 
-    </com.google.android.material.appbar.AppBarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvCategory"
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/appbarCategory"/>
+        android:layout_below="@+id/appbarCategory">
+
+        <ExpandableListView
+            android:id="@+id/exListview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:groupIndicator="@null" />
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/NavigationView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end" />
+    </androidx.drawerlayout.widget.DrawerLayout>
 
 </RelativeLayout>
