--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -47,40 +47,58 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#EFECEC"
-                android:gravity="center_vertical">
+
+                android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/lnIconText"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:foreground="?attr/selectableItemBackgroundBorderless"
-                    android:orientation="horizontal">
+                    android:layout_width="match_parent"
+                    android:background="#EFECEC"
+                    android:layout_height="wrap_content">
 
-                    <ImageView
-                        android:id="@+id/ivIconSlide"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/ic_baseline_school_24" />
+                    <LinearLayout
+                        android:id="@+id/lnIconText"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:foreground="?attr/selectableItemBackgroundBorderless"
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/tvNameCategorySlide"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:text="Thêm nhiệm vụ"
-                        android:textColor="@color/black"
-                        android:textSize="15sp" />
+                        <ImageView
+                            android:id="@+id/ivIconSlide"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/ic_baseline_school_24" />
 
+                        <TextView
+                            android:id="@+id/tvNameCategorySlide"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:text="Thêm nhiệm vụ"
+                            android:textColor="@color/black"
+                            android:textSize="15sp" />
+
+                    </LinearLayout>
+
+                    <androidx.appcompat.widget.SearchView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:queryHint="Tìm kiếm"
+                        app:queryBackground="@android:color/transparent"/>
                 </LinearLayout>
-                <androidx.appcompat.widget.SearchView
-                    android:layout_width="wrap_content"
-                    app:queryHint="Tìm kiếm"
-                    android:layout_height="wrap_content"/>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@android:color/darker_gray" />
 
+                <ListView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/lvMission"/>
             </LinearLayout>
+
+
         </com.google.android.material.navigation.NavigationView>
     </androidx.drawerlayout.widget.DrawerLayout>
 
