--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -57,9 +57,8 @@
 
                     <LinearLayout
                         android:id="@+id/lnIconText"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:foreground="?attr/selectableItemBackgroundBorderless"
                         android:orientation="horizontal">
 
@@ -78,13 +77,15 @@
                             android:textColor="@color/black"
                             android:textSize="15sp" />
 
+                        <androidx.appcompat.widget.SearchView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:queryHint="Tìm kiếm"
+                            android:id="@+id/SearchViewMiss"
+                            app:queryBackground="@android:color/transparent"/>
                     </LinearLayout>
 
-                    <androidx.appcompat.widget.SearchView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:queryHint="Tìm kiếm"
-                        app:queryBackground="@android:color/transparent"/>
+
                 </LinearLayout>
 
                 <View
