--- a/app/src/main/res/drawable/line_through.xml
+++ b/app/src/main/res/drawable/line_through.xml
@@ -1,20 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item>
-        <shape
-            android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#FFDDDDDD" />
-            <solid android:color="#fff" />
-
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="false">
+        <shape android:shape="line">
+            <stroke android:width="1dp" android:color="@android:color/black"/>
         </shape>
     </item>
-
-    <item android:bottom="1dp">
-        <shape
-            android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#FFDDDDDD" />
-            <solid android:color="#00000000" />
-        </shape>
-    </item>
-
-</layer-list>
+</selector>
