--- a/app/src/main/res/layout/row_mission_child.xml
+++ b/app/src/main/res/layout/row_mission_child.xml
@@ -10,15 +10,16 @@
             android:layout_height="wrap_content"
             android:checked="true"
             android:id="@+id/rbtnMissionChild"/>
+
         <TextView
             android:id="@+id/tvMissionChild"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:foreground="@drawable/line_through"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:foreground="@drawable/line_through"
             android:gravity="center_vertical"
-            android:text="123123"/>
+            android:text="123123"
+            android:textSize="15sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
 </LinearLayout>
