--- a/app/src/main/res/layout/reminder_row.xml
+++ b/app/src/main/res/layout/reminder_row.xml
@@ -6,7 +6,7 @@
     android:paddingHorizontal="16dp"
     android:orientation="horizontal"
     android:id="@+id/reminderRowLayout"
-    android:background="@drawable/line_through">
+    android:background="@drawable/bottom_line">
 
     <LinearLayout
         android:layout_width="0dp"
