--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -53,7 +53,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#EFECEC">
+                    android:background="#EFECEC"
+                    android:orientation="horizontal">
 
                     <LinearLayout
                         android:id="@+id/lnIconText"
@@ -77,14 +78,14 @@
                             android:textColor="@color/black"
                             android:textSize="15sp" />
 
-                        <androidx.appcompat.widget.SearchView
-                            android:id="@+id/SearchViewMiss"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:queryBackground="@android:color/transparent"
-                            app:queryHint="Tìm kiếm" />
-                    </LinearLayout>
 
+                    </LinearLayout>
+                    <androidx.appcompat.widget.SearchView
+                        android:id="@+id/SearchViewMiss"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:queryBackground="@android:color/transparent"
+                        app:queryHint="Tìm kiếm" />
 
                 </LinearLayout>
 
